fix chat resize jumping

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -43,6 +43,7 @@ input, textarea, select { font-family: 'Inter'; }
 #root { height: 100%; }
 #appContainer { display: flex; flex-direction: column; height: 100%; }
 #selection { flex-grow: 1; overflow: hidden; }
+.swiper-navigation-icon { display: none !important; }
 
 #menuBar { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 52px; z-index: -1; user-select: none; pointer-events: all; }
 
